--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "inversify": "^6.2.2",
     "jade": "~1.11.0",
     "mongodb": "^6.13.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "reflect-metadata": "^0.2.2"
   },
   "devDependencies": {
-    "@types/node": "^22.13.4"
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.13.4",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.3"
   }
 }
