--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "forceConsistentCasingInFileNames": true, // Ensure file names are case-consistent
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
+    "moduleResolution": "node",
 
   },
   "include": ["src/**/*"],                   // Include all files from "src"
